# OND-ART-CI-Pack-v0.1-

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/methodology/: README.md
docs/methodology/research/: inverse-task.md  new-horizons.md
docs/spec/: OND-ART-v0.1-Spec.md
examples/: report.sample.core.json  report.sample.dev.json  report.sample.nodisclaimer.json  report.sample.recommended.json
ond_art_ci_pack/: __init__.py  validator.py
schemas/: ond-art-report-0.1.schema.json
scripts/: validate_ond_art_reports.py
tests/: test_validator.py
