[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ond-art-ci-pack"
version = "0.1.0"
description = "CI pack for validating OND-ART v0.1 machine reports"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "jsonschema>=4.18",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]

[project.scripts]
ond-art-validate = "ond_art_ci_pack.validator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ond_art_ci_pack*"]
